--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,12 +7,23 @@
     tools:context=".MainActivity">
 
 <ListView
-    android:id="@+id/"
+    android:id="@+id/list_of_message"
+    android:layout_marginBottom="20dp"
+    android:dividerHeight="0dp"
+    android:divider="@android:color/transparent"
     android:layout_alignParentTop="true"
     android:layout_alignParentStart="true"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-
+    
 </ListView>
+    
+    <EditText
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        android:hint="@string/enter_your_message"
+
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
 </RelativeLayout>
