--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,10 +5,24 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
+    
+    <android.support.design.widget.FloatingActionButton
+        android:clickable="true"
+        android:src="@android:drawable/ic_menu_send"
+        android:id="@+id/fab"
+        android:tint="@android:color/white"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:focusable="true" />
 
 <ListView
+
     android:id="@+id/list_of_message"
     android:layout_marginBottom="20dp"
+    android:layout_above="@+id/fab"
     android:dividerHeight="0dp"
     android:divider="@android:color/transparent"
     android:layout_alignParentTop="true"
@@ -19,10 +33,10 @@
 </ListView>
     
     <EditText
+        android:layout_toLeftOf="@+id/fab"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
         android:hint="@string/enter_your_message"
-
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
