--- a/app/src/main/res/layout/list_item_message_recv.xml
+++ b/app/src/main/res/layout/list_item_message_recv.xml
@@ -1,6 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
+    
+    <ImageView
+        android:id="@+id/simsim_image"
+        android:src="@android:drawable/ic_lock_idle_charging"
+        android:layout_width="40dp"
+        android:layout_height="40dp" />
 
-</LinearLayout>
+    <com.github.library.bubbleview.BubbleTextViewView
+        android:id="@+id/text_message"
+        android:padding="10dp"
+        android:textColor="#fff"
+
+        android:layout_toRightOf="@id/simsim_image"
+        app:arrowWidth="8dp"
+        app:angle="8dp"
+        app:arrowHeight="10dp"
+        app:arrowPosition="14dp"
+        app:arrowLocation="left"
+        app:arrowCenter="true"
+        app:bubbleColor="@color/colorAccent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+</RelativeLayout>
