--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,6 +33,7 @@
 </ListView>
     
     <EditText
+        android:id="@+id/user_message"
         android:layout_toLeftOf="@+id/fab"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
